--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-link": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-underline": "^3.19.0",
     "@tiptap/pm": "^3.13.0",
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
